feat:add visulaze importance of fea

--- a/Pipeline-chunks/特征工程.ipynb
+++ b/Pipeline-chunks/特征工程.ipynb
@@ -391,6 +391,43 @@
     "\n",
     "总体而言，这段代码通过五折分层交叉验证的方式为每个分类特征创建了一个基于目标变量的均值编码特征。这种方法可以减少目标泄露（target leakage）的风险，因为每次都是使用不包含验证部分数据的训练部分来计算均值。目标编码特征通常可以为模型提供有关类别与目标之间关系的有用信息，从而可能提高模型的性能。然而，需要注意防止过拟合，特别是当某些类别的样本量很小的时候。"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 可视化特征重要性"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fea_imp = pd.DataFrame()\n",
+    "fea_imp['imp'] = clf.feature_importance()\n",
+    "fea_imp['fea_name'] = clf.feature_name()\n",
+    "fea_imp = fea_imp.sort_values('imp')[:30]\n",
+    "plt.figure(figsize=(10, 10))\n",
+    "plt.barh(fea_imp['fea_name'],fea_imp['imp'],height =0.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "这段代码的目的是可视化一个模型中特征的重要性。具体来说，这段代码做了以下几个步骤：\n",
+    "\n",
+    "1. 创建一个名为 `fea_imp` 的空 DataFrame。\n",
+    "2. 计算使用的特征重要性，将其存储在 `clf.feature_importance()` 中，并将其添加到 `fea_imp` DataFrame 的 'imp' 列中。\n",
+    "3. 获取模型中特征的名称，并将其添加到 `fea_imp` DataFrame 的 'fea_name' 列中。\n",
+    "4. 按照特征重要性对 `fea_imp` DataFrame 进行降序排序，并选择前 30 个最重要的特征。\n",
+    "5. 创建一个大小为 10x10 英寸的图形。\n",
+    "6. 使用条形图横向展示前 30 个特征的重要性，其中 x 轴表示特征重要性，y 轴表示特征名称。每个条形的高度设置为 0.5。\n",
+    "\n",
+    "总之，这段代码用于可视化模型中特征的重要性，并显示前 30 个最具有影响力的特征。"
+   ]
   }
  ],
  "metadata": {
